kernel/headers/SnapPea.h


typedef enum
{
    not_attempted,          
    geometric_solution,     
    nongeometric_solution,  
    flat_solution,          
    degenerate_solution,    
    other_solution,         
    no_solution,            
    externally_computed     
} SolutionType;
typedef enum
{
    complete,
    filled
} FillingStatus;
typedef enum
{
    func_OK = 0,
    func_cancelled,
    func_failed,
    func_bad_input
} FuncResult;
typedef struct
{
    Real  real;
    Real  imag;
} Complex;
typedef char   Boolean;
typedef struct
{
    int         num_torsion_coefficients;   
    long int    *torsion_coefficients;      
} AbelianGroup;
typedef enum
{
    torus_cusp,
    Klein_cusp,
    unknown_topology
} CuspTopology;
typedef struct Triangulation                Triangulation;
typedef struct GroupPresentation            GroupPresentation;
extern void free_abelian_group(AbelianGroup *g);
Triangulation *construct_cover( Triangulation           *base_manifold,
                                RepresentationIntoSn    *representation,
                                int                     n);
extern GroupPresentation *fundamental_group(
                    Triangulation   *manifold,
                    Boolean         simplify_presentation,
                    Boolean         fillings_may_affect_generators,
                    Boolean         minimize_number_of_generators,
                    Boolean         try_hard_to_shorten_relators);
extern int fg_get_num_generators(GroupPresentation *group);
extern int fg_get_num_orig_gens(GroupPresentation   *group);
extern int fg_get_num_relations(GroupPresentation *group);
extern int  *fg_get_relation(   GroupPresentation   *group,
                                int                 which_relation);
extern void fg_free_relation(int *relation);
extern int  *fg_get_meridian(   GroupPresentation   *group,
                                int                 which_cusp);
extern int  *fg_get_longitude(  GroupPresentation   *group,
                                int                 which_cusp);
extern int  *fg_get_original_generator( GroupPresentation   *group,
                                        int                 which_generator);
extern AbelianGroup *homology(Triangulation *manifold);
extern void homology_presentation(
    Triangulation *manifold,
    RelationMatrix *relation_matrix);
extern void free_relations(RelationMatrix  *relation_matrix);
extern SolutionType do_Dehn_filling(Triangulation *manifold);
extern char *get_triangulation_name(Triangulation *manifold);
extern void set_triangulation_name(Triangulation *manifold, const char *new_name);
extern void get_cusp_info(  Triangulation   *manifold,
                            int             cusp_index,
                            CuspTopology    *topology,
                            Boolean         *is_complete,
                            Real          *m,
                            Real          *l,
                            Complex         *initial_shape,
                            Complex         *current_shape,
                            int             *initial_shape_precision,
                            int             *current_shape_precision,
                            Complex         *initial_modulus,
                            Complex         *current_modulus);
extern FuncResult set_cusp_info(Triangulation   *manifold,
                                int             cusp_index,
                                Boolean         cusp_is_complete,
                                Real          m,
                                Real          l);
RepresentationList *find_representations(   Triangulation       *manifold,
                                            int                 n,
                                            PermutationSubgroup range);
void free_representation_list(
    RepresentationList *representation_list);
RepresentationIntoSn *initialize_new_representation(
      int num_original_generators,
      int n,
      int num_cusps);
RepresentationIntoSn *convert_candidateSn_to_original_generators(
     int **candidateSn,
     int n,
     int num_original_generators,
     int **original_generators,
     Triangulation *manifold,
     int **meridians,
     int **longitudes);
void free_representation(
     RepresentationIntoSn *representation,
     int                  num_generators,
     int                  num_cusps);
Boolean candidateSn_is_valid(
     int **candidateSn,
     int n,
     int **group_relations,
     int num_relations);
Boolean candidateSn_is_transitive(
     int **candidateSn,
     int num_generators,
     int n);
extern Real volume(Triangulation *manifold, int *precision);