SnapPeaCy.pyx

 
    def set_name(self, new_name):
        cdef char* c_new_name = new_name
        if self.c_triangulation is not NULL:
            set_triangulation_name(self.c_triangulation, c_new_name)

    def get_name(self):
        if self.c_triangulation is not NULL:
            return get_triangulation_name(self.c_triangulation)
    
    def cusp_info(self, which_cusp = 0):
        cdef c_CuspTopology topology
        cdef Boolean is_complete,
        cdef double m, l
        cdef Complex initial_shape, current_shape
        cdef int initial_shape_precision, current_shape_precision,
        cdef Complex initial_modulus, current_modulus
        if type(which_cusp) != types.IntType:
            raise ValueError, 'Specify the index of the cusp.'
        if which_cusp >= self.num_cusps or which_cusp < 0:
            raise IndexError, 'There are %d cusps!'%self.num_cusps
        get_cusp_info(self.c_triangulation, which_cusp,
                      &topology, &is_complete, &m, &l,
                      &initial_shape, &current_shape,
                      &initial_shape_precision, &current_shape_precision,
                      &initial_modulus, &current_modulus)
        return {'cusp topology' : CuspTopology[topology],
                'complete' : is_complete,
                'm' : m, 'l' : l,
                'initial shape' : C2C(initial_shape),
                'current shape' : C2C(current_shape),
                'initial shape precision' : initial_shape_precision,
                'current shape precision' : current_shape_precision,
                'initial modulus' : C2C(initial_modulus),
                'current modulus' : C2C(current_modulus)}

    def volume(self):
        """
	Returns the volume of the manifold.
        """
        return volume(self.c_triangulation, NULL)

    def volume_with_precision(self):
        """
	Returns (V,p) where V is the computed volume of the manifold,
        and p is the number of digits of accuracy estimated by SnapPea.
        """
        cdef int precision
        vol = volume(self.c_triangulation, &precision)
        return (vol, precision)
                                                     
    def homology(self):
        """
        Returns an AbelianGroup representing the first integral homology
        group of the (Dehn filled) manifold.
        """
        cdef c_AbelianGroup *H
        cdef RelationMatrix R
        cdef int m, n
        coefficient_list = []
        H = homology(self.c_triangulation)
        if H != NULL:
            for n from 0 <= n < H.num_torsion_coefficients:
                coefficient_list.append(H.torsion_coefficients[n])
            free_abelian_group(H)
            return AbelianGroup(coefficient_list)
        else:
            homology_presentation(self.c_triangulation, &R)
            relations = []
            if R.relations != NULL:
                for m from 0 <= m < R.num_rows:
                    row = []
                    for n from 0 <= n < R.num_columns:
                        row.append(R.relations[m][n])
                    relations.append(row)
                coefficient_list = smith_form(matrix(relations))
            free_relations(&R)
        return AbelianGroup(coefficient_list)

    def fundamental_group(self):
        """
        Returns a FundamentalGroup corresponding to the fundamental
        group of the manifold.  If integer Dehn surgery parameters
        have been set, the corresponding conjugacy class is killed.
        """
        return FundamentalGroup(self)

    def finite_cover(self, permutation_list):
        """
        Returns a Manifold corresponding to a finite cover specified
        by a transitive permutation representation.  The
        representation is specified by a list of permutations, one for
        each generator of the (simplified) fundamental group.  A
        permutation is specified as a list P such that set(P) ==
        set(range(d)) where d is the degree of the cover.
        """
        cdef RepresentationIntoSn* c_representation
        cdef Triangulation* c_triangulation
        cdef Manifold cover

        G = self.fundamental_group()
        c_representation = self.build_rep_into_Sn(permutation_list)
        degree = len(permutation_list[0])
        c_triangulation = construct_cover(self.c_triangulation,
                                          c_representation,
                                          degree)
        cover = Manifold()
        cover.set_c_triangulation(c_triangulation)
        cover.set_name(self.get_name()+'.cover')
        free_representation(c_representation, G.num_orig_gens(), self.num_cusps)
        return cover

    def finite_covers(self, degree):
        """
        Returns a list of Manifolds corresponding to all of the finite
        covers of the given degree.  (If the degree is large this may
        take a very, very long time.)
        """
        cdef RepresentationList* reps
        cdef RepresentationIntoSn* rep
        cdef Triangulation* cover
        cdef Manifold M
        
        reps = find_representations(self.c_triangulation,
                                        degree,
                                        permutation_subgroup_Sn)
        covers = []
        rep = reps.list
        while rep != NULL:
            cover = construct_cover(self.c_triangulation,
                                    rep,
                                    reps.num_sheets)
            M = Manifold()
            M.set_c_triangulation(cover)
            covers.append(M)
            rep = rep.next
        free_representation_list(reps)
        for i in range(len(covers)):
            covers[i].set_name(self.get_name()+'.cover%d'%i)
        return covers

    def dehn_fill(self, meridian, longitude, which_cusp=0):
        complete = ( meridian == 0 and longitude == 0)
        set_cusp_info(self.c_triangulation,
                      which_cusp, complete, meridian, longitude)
        do_Dehn_filling(self.c_triangulation)

    cdef RepresentationIntoSn *build_rep_into_Sn(self,
                                                 permutation_list):
        """
        Build a SnapPea RepresentationIntoSn from a list of
        permutations, one for each generator of the simplified
        fundamental group.  A permutation is specified as a list P
        such that set(P) == set(range(d)) where d is the degree of the
        cover.  The representation constructed here is given in terms
        of the geometric generators, for use in construcing a covering
        space.  (This awful mess like totally belongs in the kernel!)
        """
        cdef Triangulation* cover
        cdef Triangulation* c_triangulation
        cdef c_GroupPresentation *c_group_presentation
        cdef RepresentationIntoSn* c_representation
        cdef RepresentationIntoSn* c_repn_in_original_gens = NULL
        cdef int i, j
        cdef num_generators, num_relators, num_orig_gens, num_cusps
        cdef int** c_original_generators
        cdef int** c_relators
        cdef int** c_meridians
        cdef int** c_longitudes

        degree = len(permutation_list[0])

        # Sanity check
        S = set(range(degree))
        for permutation in permutation_list:
            if set(permutation) != S:
                raise ValueError, "Not a valid permutation list"

        # Initialize
        num_cusps = self.num_cusps
        c_triangulation = self.c_triangulation
        c_group_presentation = fundamental_group(c_triangulation,
                                             True, True, True)
        num_generators = fg_get_num_generators(c_group_presentation)
        num_relators = fg_get_num_relations(c_group_presentation)
        num_orig_gens = fg_get_num_orig_gens(c_group_presentation)

        # Allocate a whole bunch of memory, SnapPea and otherwise.
        c_representation = initialize_new_representation(
            num_orig_gens,
            degree,
            num_cusps)
        for i from 0 <= i < num_generators:
            for j from 0 <= j < degree:
                c_representation.image[i][j] = permutation_list[i][j]
        c_original_generators = <int**>malloc(num_orig_gens*sizeof(int*));
        for i from  0 <= i < num_orig_gens:
            c_original_generators[i] = fg_get_original_generator(
                c_group_presentation, i)
        c_relators = <int**>malloc(num_relators*sizeof(int*));
        for i from  0 <= i < num_relators:
            c_relators[i] = fg_get_relation(c_group_presentation, i)
        c_meridians = <int**>malloc(num_cusps*sizeof(int*))
        c_longitudes = <int**>malloc(num_cusps*sizeof(int*))
        for i from 0 <= i < num_cusps:
            c_meridians[i] = fg_get_meridian(c_group_presentation, i)
            c_longitudes[i] = fg_get_longitude(c_group_presentation, i)
        # Whew!

        if (candidateSn_is_valid(c_representation.image, 
                                 degree, c_relators, num_relators) and
            candidateSn_is_transitive(c_representation.image,
                                      num_generators, degree) ):
            c_repn_in_original_gens = convert_candidateSn_to_original_generators(
                c_representation.image,
                degree,
                num_orig_gens,
                c_original_generators,
                c_triangulation,
                c_meridians,
                c_longitudes)
        else:
            message = "Invalid permutation data."
            failed = True
        if c_repn_in_original_gens == NULL:
            print "Failed to construct permutation rep."
            failed = True
    
        # Now free all that memory
        for i from 0 <= i < num_cusps:
            fg_free_relation(c_meridians[i])
            fg_free_relation(c_longitudes[i])
        free(c_meridians)
        free(c_longitudes)
        for i from 0 <= i < num_relators:
            fg_free_relation(c_relators[i])
        free(c_relators)
        for i from 0 <= i < num_orig_gens:
            fg_free_relation(c_original_generators[i])
        free(c_original_generators)
        free_representation(c_representation, num_generators, num_cusps)
        # At last!

        if failed:
            raise RuntimeError, message
        return c_repn_in_original_gens


cdef C2C(Complex C):
    return complex(C.real, C.imag)

Alphabet = '$abcdefghijklmnopqrstuvwxyzZYXWVUTSRQPONMLKJIHGFEDCBA'

cdef class FundamentalGroup:
    """
    A FundamentalGroup object represents a presentation of the
    fundamental group of a SnapPeaX Manifold, together with the
    holonomy representation of the Manifold and an arbitrarily chosen
    lift of the holonomy to SL(2,C).  It can evaluate these
    representations on a group element.  Group elements are described
    as words in the generators a,b,..., where the inverse of a is
    denoted A.  Words are represented by python strings (and the
    concatenation operator is named "+").

    Instantiate as FundamentalGroup(M), where M is a Manifold object.

    Methods:
        num_generators() --> number of generators
        num_relators()   --> number of relators
        generators()     --> list of generators
        relators()       --> list of relators
        meridian(n)      --> word representing the meridian on cusp #n
        longitude(n)     --> word representing the longitude on cusp #n
        O31(word)        --> evaluates the holonomy of the word
        SL2C(word)       --> evaluates the chosen lift of the holonomy
    """

    cdef c_GroupPresentation *c_group_presentation
    cdef readonly num_cusps
        
    cdef c_word_as_string(self, int *word):
        cdef int n = 0
        word_list = []
        while word[n] != 0:
            word_list.append(Alphabet[word[n]])
            n += 1
        return ''.join(word_list)
